# test_LogReg_SVM_lesson

./: Lesson_solution.ipynb  README.md  pyproject.toml
